--- a/DotNetGuiApp/MainPage.xaml
+++ b/DotNetGuiApp/MainPage.xaml
@@ -16,7 +16,7 @@
                 HorizontalOptions="Center" />
 
             <Label
-                Text="Hello, .Net Maui!"
+                Text="Hello, .Net Maui...!"
                 SemanticProperties.HeadingLevel="Level1"
                 FontSize="32"
                 HorizontalOptions="Center" />
