added platform info

--- a/DotNetGuiApp/MainPage.xaml
+++ b/DotNetGuiApp/MainPage.xaml
@@ -9,6 +9,13 @@
             Padding="30,0"
             VerticalOptions="Center">
 
+            <Label
+                x:Name="PlatformLabel"
+                Text="OS"
+                SemanticProperties.HeadingLevel="Level1"
+                FontSize="32"
+                HorizontalOptions="Center"/>
+
             <Image
                 Source="dotnet_bot.png"
                 SemanticProperties.Description="Cute dot net bot waving hi to you!"
